.kubernetes/ingress.yaml
# ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <APPLICATION_NAME>
  namespace: <NAMESPACE>
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/body-size: "102400m"
    nginx.ingress.kubernetes.io/proxy-body-size: "102400m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "102400m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "8 52m"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "52m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "102400m"
    nginx.ingress.kubernetes.io/client-max-body-size: "102400m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /test/(.*)
            pathType: Prefix
            backend:
              service:
                name: <APPLICATION_NAME>
                port:
                  number: 80
